--- a/package.json
+++ b/package.json
@@ -21,14 +21,18 @@
     "express": "^4.18.2",
     "input": "^1.0.1",
     "node-telegram-bot-api": "^0.64.0",
+    "send": "^0.18.0",
     "telegram": "^2.19.10",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.3",
+    "@babel/preset-env": "^7.23.3",
     "@types/dotenv": "^8.2.0",
     "@types/node": "^20.9.1",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
+    "babel-loader": "^9.1.3",
     "eslint": "^8.54.0",
     "html-webpack-plugin": "^5.5.3",
     "husky": "^8.0.3",
